--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Portfolio</title>
-  <link rel="icon" href="image/fav.png">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -23,8 +22,23 @@
       transform-origin: center; /* Rotate around the center */
       display: none; /* Initially hide the custom cursor */
     }
+    *{
+      
+      cursor: url('image/black.png'), auto;
+    }
     html {
       cursor: url('image/black.png'), auto;
+    }
+    #backimg{
+      position: absolute;
+      right: -15%;
+      width: 100vw;
+      height: 175vh;
+      transition: 100s;
+      filter: blur(5px);
+    }
+    body{
+      overflow: hidden;
     }
     </style>
 </head>
@@ -43,7 +57,7 @@
     </div>
   </nav>
 
-
+<img id="backimg" src="image/computer.png" alt="">
   <main>
     <div class="content">
 
