--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>About me</title>
 	<link rel="icon" href="image/fav.png">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <style>
+  <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Poppins:wght@300&family=Ubuntu:wght@500&display=swap');
 
         * {
@@ -280,15 +280,7 @@
                         <img src="image/my.jpg" alt="">
                     </div>
                     <div class="message">
-                        <p>Throughout my career <img style=" 
-                                position: relative;
-    width: 18px;
-    display: inline-block;
-    left: 0px;
-    border-radius: 0%;
-    height: 30px;
-    top: 8px;
-    cursor: pointer;" src="image/spray.png" alt="">, I have worked on various projects ranging from branding and
+                        <p>Throughout my <a href="error.html">career</a> I have worked on various projects ranging from branding and
                             advertising
                             to web and print design. I have collaborated with clients from diverse industries,
                             understanding their requirements and providing them with innovative design solutions.
