--- a/error.html
+++ b/error.html
@@ -19,7 +19,7 @@
 
         html {
             scroll-behavior: smooth;
-            cursor: url('image/white.png'), auto;
+            cursor: url('image/black.png'), auto;
 
         }
 
