--- a/error.html
+++ b/error.html
@@ -35,9 +35,9 @@
 </head>
 
 <body>
-  <a href="index.html"><lottie-player
+  <lottie-player
   src="https://lottie.host/f2fe151e-6a3f-4a1c-9164-ec4b21dc649c/y7SWbo8G60.json"
   background="Transparent" speed="1" style=" width: 25%;" direction="1" mode="normal" loop autoplay></lottie-player>
-</body></a>
+</body>
 
 </html>
