--- a/index.html
+++ b/index.html
@@ -233,6 +233,36 @@
         </div>
       </div>
 
+
+      <div class="line">
+        <div class="left">Music Logo</div>
+        <div class="right">
+          <p>Adobe Illustrator</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/bc0ef7178761103.64ede2aedb75b.jpg"
+            alt="">
+        </div>
+      </div>
+
+
+      <div class="line">
+        <div class="left">CRM Mockup</div>
+        <div class="right">
+          <p>FIGMA</p>
+          <p>2023</p>
+        </div>
+        <div class="img">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/322ddc178739389.64ed9d60c62a2.png"
+            alt="">
+        </div>
+      </div>
+
+
+
+      
+
     </div>
   </main>
 
