--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js"></script>
   <style>
     .custom-cursor {
       left: -100px;
@@ -54,54 +56,60 @@
 </head>
 
 <body>
-  <div class="custom-cursor"></div>
 
-  <nav>
-    <div class="left">
-      <a href="#">
-        <img src="image/logo.svg" height="35px" alt="">
-      </a>
-    </div>
-    <div class="right">
-      <a href="about.html" id="#about">About</a>
-    </div>
-  </nav>
+  <div id="loading-screen">
+    <div id="lottie-container"></div>
+  </div>
 
-  <img id="backimg" src="image/computer.png" alt="">
-  <main>
-    <div class="content">
+  <div id="website-content" style="display: none;">
+    <div class="custom-cursor"></div>
 
-
-
-
-      <div class="line">
-        <div class="left">Dating App UI</div>
-        <div class="right">
-          <p>Figma</p>
-          <p>2022</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/fac76f177082723.64d08faf46cba.png"
-            alt="">
-        </div>
+    <nav>
+      <div class="left">
+        <a href="#">
+          <img src="image/logo.svg" height="35px" alt="">
+        </a>
       </div>
-
-
-      <div class="line">
-        <div class="left">Login Page</div>
-        <div class="right">
-          <p>Figma</p>
-          <p>2022</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/ee9654176977137.64ce219a8f406.png"
-            alt="">
-        </div>
+      <div class="right">
+        <a href="about.html" id="#about">About</a>
       </div>
+    </nav>
+
+    <img id="backimg" src="image/computer.png" alt="">
+    <main>
+      <div class="content">
 
 
 
-      <!-- <div class="line">
+
+        <div class="line">
+          <div class="left">Dating App UI</div>
+          <div class="right">
+            <p>Figma</p>
+            <p>2022</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/fac76f177082723.64d08faf46cba.png"
+              alt="">
+          </div>
+        </div>
+
+
+        <div class="line">
+          <div class="left">Login Page</div>
+          <div class="right">
+            <p>Figma</p>
+            <p>2022</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/ee9654176977137.64ce219a8f406.png"
+              alt="">
+          </div>
+        </div>
+
+
+
+        <!-- <div class="line">
         <div class="left">Login Page</div>
         <div class="right">
           <p>Figma</p>
@@ -115,246 +123,247 @@
 
 
 
-      <div class="line">
-        <div class="left">Banner Design</div>
-        <div class="right">
-          <p>Adobe Illustrator</p>
-          <p>2023</p>
+        <div class="line">
+          <div class="left">Banner Design</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/809342176911961.64ccdd44d5c8d.png" alt="">
+          </div>
         </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/809342176911961.64ccdd44d5c8d.png" alt="">
+
+
+
+        <div class="line">
+          <div class="left">Restaurant Menu Design</div>
+          <div class="right">
+            <p>PhotoShop, Illustrator</p>
+            <p>2022</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6ca7ac169213829.6448e803c52db.png" alt="">
+          </div>
         </div>
+
+
+        <div class="line">
+          <div class="left">Construct Connect Logo</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/e02985169213829.64a543a5a2da8.png"
+              alt="">
+          </div>
+        </div>
+
+
+
+        <div class="line">
+          <div class="left">Webreate Logo</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="image/1.png" alt="">
+          </div>
+        </div>
+
+
+
+
+        <div class="line">
+          <div class="left">Social Media Home Design</div>
+          <div class="right">
+            <p>Figma ,Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/d63a04169213829.6471536bbd1fc.png" alt="">
+          </div>
+        </div>
+
+
+
+        <div class="line">
+          <div class="left">Happy Birthday Poster Design</div>
+          <div class="right">
+            <p>Adobe PhotoShop</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/1ace95169213829.64a543a60d655.png"
+              alt="">
+          </div>
+        </div>
+
+
+
+
+        <div class="line">
+          <div class="left">Game Poster Design</div>
+          <div class="right">
+            <p>PhotoShop, Illustrator</p>
+            <p>2022</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/789750169213829.64884736174af.png"
+              alt="">
+          </div>
+        </div>
+
+
+
+
+        <div class="line">
+          <div class="left">Nature's Graph Logo</div>
+          <div class="right">
+            <p>Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/503734169213829.6488473616295.png"
+              alt="">
+          </div>
+        </div>
+
+
+
+
+
+
+
+        <div class="line">
+          <div class="left">Neha Events Logo</div>
+          <div class="right">
+            <p>Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/defa6a169213829.64c115dc72391.png"
+              alt="">
+          </div>
+        </div>
+
+
+
+
+        <div class="line">
+          <div class="left">Instagram Grid Design</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/21b2a3178504475.64e8e6dcbf051.jpg"
+              alt="">
+          </div>
+        </div>
+
+
+        <div class="line">
+          <div class="left">Music Logo</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/bc0ef7178761103.64ede2aedb75b.jpg"
+              alt="">
+          </div>
+        </div>
+
+
+        <div class="line">
+          <div class="left">CRM Mockup</div>
+          <div class="right">
+            <p>FIGMA</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/322ddc178739389.64ed9d60c62a2.png" alt="">
+          </div>
+        </div>
+
+
+        <div id="hover-title" class="line">
+          <div class="left">Mockup Video Animation</div>
+          <div class="right">
+            <p>After effects, Illustrator, premiere</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <video id="hover-video" muted loop>
+              <source src="image/mockup.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
+        <div id="hover-title2" class="line">
+          <div class="left">Music Video Animation</div>
+          <div class="right">
+            <p>After effects, Illustrator, premiere</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <video id="hover-video2" muted loop>
+              <source src="image/music.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
+
+
       </div>
+    </main>
+  </div>
 
 
 
-      <div class="line">
-        <div class="left">Restaurant Menu Design</div>
-        <div class="right">
-          <p>PhotoShop, Illustrator</p>
-          <p>2022</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6ca7ac169213829.6448e803c52db.png" alt="">
-        </div>
-      </div>
+<script>
+  // Get references to the loading screen and website content
+  const loadingScreen = document.getElementById('loading-screen');
+  const websiteContent = document.getElementById('website-content');
 
+  // Delay the content display for 3 seconds (3000 milliseconds)
+  setTimeout(function () {
+    // Hide the loading screen by changing its opacity
+    loadingScreen.style.animation = '2s madhu';
+    // loadingScreen.style.opacity = '0';
 
-      <div class="line">
-        <div class="left">Construct Connect Logo</div>
-        <div class="right">
-          <p>Adobe Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/e02985169213829.64a543a5a2da8.png"
-            alt="">
-        </div>
-      </div>
+    setTimeout(function () {
+      loadingScreen.style.display = 'none';
+    }, 2000);
 
+    // Use a setTimeout to remove the loading screen from the DOM after the transition completes
+     // Wait for the transition (1s in this case) to complete
+    
+    // Show the website content
+    websiteContent.style.display = 'block';
+    websiteContent.style.opacity = '1';
+  }, 3000); // 3000 milliseconds = 3 seconds
+</script>
 
+  
+  <script>
+    // Get a reference to the HTML container
+    const container = document.getElementById('lottie-container');
 
-      <div class="line">
-        <div class="left">Webreate Logo</div>
-        <div class="right">
-          <p>Adobe Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="image/1.png" alt="">
-        </div>
-      </div>
-
-
-
-
-      <div class="line">
-        <div class="left">Social Media Home Design</div>
-        <div class="right">
-          <p>Figma ,Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/d63a04169213829.6471536bbd1fc.png" alt="">
-        </div>
-      </div>
-
-
-
-      <div class="line">
-        <div class="left">Happy Birthday Poster Design</div>
-        <div class="right">
-          <p>Adobe PhotoShop</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/1ace95169213829.64a543a60d655.png"
-            alt="">
-        </div>
-      </div>
-
-
-
-
-      <div class="line">
-        <div class="left">Game Poster Design</div>
-        <div class="right">
-          <p>PhotoShop, Illustrator</p>
-          <p>2022</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/789750169213829.64884736174af.png"
-            alt="">
-        </div>
-      </div>
-
-
-
-
-      <div class="line">
-        <div class="left">Nature's Graph Logo</div>
-        <div class="right">
-          <p>Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/503734169213829.6488473616295.png"
-            alt="">
-        </div>
-      </div>
-
-
-
-
-
-
-
-      <div class="line">
-        <div class="left">Neha Events Logo</div>
-        <div class="right">
-          <p>Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/defa6a169213829.64c115dc72391.png"
-            alt="">
-        </div>
-      </div>
-
-
-
-
-      <div class="line">
-        <div class="left">Instagram Grid Design</div>
-        <div class="right">
-          <p>Adobe Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/21b2a3178504475.64e8e6dcbf051.jpg"
-            alt="">
-        </div>
-      </div>
-
-
-      <div class="line">
-        <div class="left">Music Logo</div>
-        <div class="right">
-          <p>Adobe Illustrator</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/bc0ef7178761103.64ede2aedb75b.jpg"
-            alt="">
-        </div>
-      </div>
-
-
-      <div class="line">
-        <div class="left">CRM Mockup</div>
-        <div class="right">
-          <p>FIGMA</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/322ddc178739389.64ed9d60c62a2.png" alt="">
-        </div>
-      </div>
-
-
-      <div id="hover-title" class="line">
-        <div class="left">Mockup Video Animation</div>
-        <div class="right">
-          <p>After effects, Illustrator, premiere</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <video id="hover-video" muted loop>
-            <source src="image/mockup.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-
-      <div id="hover-title2" class="line">
-        <div class="left">Music Video Animation</div>
-        <div class="right">
-          <p>After effects, Illustrator, premiere</p>
-          <p>2023</p>
-        </div>
-        <div class="img">
-          <video id="hover-video2" muted loop>
-            <source src="image/music.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-
-
-
-    </div>
-  </main>
-
-
-
-
-
-
-
-
- <script>
-  document.addEventListener("DOMContentLoaded", function () {
-  const lineContainers = document.querySelectorAll(".line");
-
-  lineContainers.forEach((lineContainer) => {
-    const imageContainer = lineContainer.querySelector(".img");
-    const image = imageContainer.querySelector("img");
-
-    imageContainer.addEventListener("click", () => {
-      const lightboxContainer = document.createElement("div");
-      lightboxContainer.classList.add("lightbox-container");
-
-      const lightboxImage = document.createElement("img");
-      lightboxImage.src = image.src;
-      lightboxImage.classList.add("lightbox-image");
-
-      const closeLightboxButton = document.createElement("button");
-      closeLightboxButton.classList.add("lightbox-close-button");
-      closeLightboxButton.innerText = "Close";
-      closeLightboxButton.style.zIndex = "9999"; // Set a higher z-index
-
-      lightboxContainer.appendChild(lightboxImage);
-      lightboxContainer.appendChild(closeLightboxButton);
-
-      document.body.appendChild(lightboxContainer);
-
-      // Close the lightbox when clicking the close button
-      closeLightboxButton.addEventListener("click", () => {
-        document.body.removeChild(lightboxContainer);
-      });
+    // Load the Lottie animation
+    const animation = lottie.loadAnimation({
+      container: container,
+      renderer: 'svg', // You can choose 'svg', 'canvas', or 'html' depending on your preference and browser support
+      loop: false,       // Set to true if you want the animation to loop
+      autoplay: true,   // Set to true if you want the animation to play automatically
+      path: 'loading.json', // Replace with the path to your JSON animation file
     });
-  });
-});
+  </script>
 
- </script>
+
 
 
 
@@ -439,6 +448,22 @@
         cursor.style.cursor = 'auto'; // Show the default cursor
       }
     });
+  </script>
+
+  <script>
+  var elements = document.querySelectorAll('.line');
+  var classNameToAdd = 'active';
+  for (var i = 0; i < elements.length; i++) {
+  elements[i].addEventListener('click', function() {
+    // Remove the class from all elements
+    for (var j = 0; j < elements.length; j++) {
+      elements[j].classList.remove(classNameToAdd);
+    }
+
+    // Add the class to the clicked element
+    this.classList.add(classNameToAdd);
+  });
+}
   </script>
 
 
