--- a/index.html
+++ b/index.html
@@ -316,6 +316,17 @@
           </div>
         </div>
 
+        
+        <div class="line">
+          <div class="left">CRM Mockup</div>
+          <div class="right">
+            <p>FIGMA</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/8e4183180538865.650c459d7c3cd.jpg" alt="">
+          </div>
+        </div>
 
 
       </div>
