--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
 
         
         <div class="line">
-          <div class="left">CRM Mockup</div>
+          <div class="left">Music Production Logo</div>
           <div class="right">
-            <p>FIGMA</p>
+            <p>Illustrator, Photoshop</p>
             <p>2023</p>
           </div>
           <div class="img">
