--- a/index.html
+++ b/index.html
@@ -328,6 +328,31 @@
         </div>
 
 
+         <div class="line">
+          <div class="left">SDS Logo</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/8e4183180538865.650c459d7c3cd.jpg"
+              alt="">
+          </div>
+        </div>
+
+
+         <div class="line">
+          <div class="left">SDS Logo</div>
+          <div class="right">
+            <p>Adobe Illustrator</p>
+            <p>2023</p>
+          </div>
+          <div class="img">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/fdb4a3180538865.650c459d7d4e2.jpg"
+              alt="">
+          </div>
+        </div>
+
 
       </div>
     </main>
